# graph_learning

./: 2_a.ipynb  2_b.ipynb  2_c_d.ipynb  2_c_d_e.ipynb  GNN_tutorial.ipynb  README.md  imports.py  main.py  pyproject.toml  tutorial.ipynb
report/: references.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.tex
