[project]
name = "graph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
